--- a/manifests/secrets.yaml
+++ b/manifests/secrets.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: test-secret
+  name: nithu99-secret
+  namespace: nithu
+type: Opaque
 data:
-  username: bermtecacrshared
-  password: kTMrXB6bLMNojJvARYPYE44ugLM5TiZborsC1WapSj+ACRAU/ovu
+  SECRET_KEY: bXlzZWNyZXRwYXNzd29yZA==  # Base64-encoded "mysecretpassword"
