--- a/manifests/Service.yaml
+++ b/manifests/Service.yaml
@@ -1,18 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: walmartpaymentservice
-  namespace: walmartdev
+  name: my-service
+  namespace: nithu
 spec:
   selector:
-    app: walmartpayment-dev
+    app: dotnetdemo
   type: LoadBalancer
-  sessionAffinity: None
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 10800
   ports:
-  - name: http-port
-    protocol: TCP
-    port: 80
-    targetPort: 5000
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
