--- a/manifests/configmap.yaml
+++ b/manifests/configmap.yaml
@@ -1,7 +1,8 @@
-kind: ConfigMap
 apiVersion: v1
+kind: ConfigMap
 metadata:
-  name: CM
-  namespace: default
+  name: nithu99-configmap
+  namespace: nithu
 data:
-  key: DB_HOST
+  ENV_VARIABLE_1: value1
+  ENV_VARIABLE_2: value2
