--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,59 +1,56 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  walmartpayment-dev
-  namespace: walmartdev
+  name: nithu99
+  namespace: nithu
   labels:
-    app:  walmartpayment-dev
+    app: nithu99
 spec:
+  replicas: 2
   selector:
     matchLabels:
-      app: walmartpayment-dev
-  replicas: 1
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+      app: nithu99
   template:
     metadata:
       labels:
-        app:  walmartpayment-dev
+        app: nithu99
     spec:
-      # initContainers:
-        # Init containers are exactly like regular containers, except:
-          # - Init containers always run to completion.
-          # - Each init container must complete successfully before the next one starts.
       containers:
-      - name:  walmartpayment-dev
-        image:  bermtecacrshared.azurecr.io/bermtecpayment:latest
+      - name: nithu99
+        image: nithu99/dotnet-demo-app:v1.0
+        ports:
+        - containerPort: 80
         resources:
-          requests:
-            cpu:  100m
-            memory: 300Mi
           limits:
-            cpu: 200m
-            memory: 300Mi
+            cpu: "200m"
+            memory: "300Mi"
+          requests:
+            cpu: "100m"
+            memory: "300Mi"
         livenessProbe:
           exec:
             command:
             - ls
           initialDelaySeconds: 5
-          timeoutSeconds: 5
-          successThreshold: 1
+          periodSeconds: 5
           failureThreshold: 3
-          periodSeconds: 10
+          successThreshold: 1
         readinessProbe:
           exec:
             command:
             - ls
           initialDelaySeconds: 5
-          timeoutSeconds: 2
-          successThreshold: 1
-          failureThreshold: 3
           periodSeconds: 10
-        ports:
-        - containerPort:  80
-          name:  walmartdev
-        imagePullPolicy: Always
-      restartPolicy: Always
+          failureThreshold: 3
+          successThreshold: 1
+        env:
+        - name: ENV_VARIABLE_1
+          valueFrom:
+            configMapKeyRef:
+              name: nithu99-configmap
+              key: ENV_VARIABLE_1
+        - name: SECRET_KEY
+          valueFrom:
+            secretKeyRef:
+              name: nithu99-secret
+              key: SECRET_KEY
