--- a/service.yaml
+++ b/service.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: bhanuteja822-serviceaccount
+  name: nithu99-serviceaccount
   namespace: nv1
