--- a/manifests/hpa.yaml
+++ b/manifests/hpa.yaml
@@ -1,13 +1,18 @@
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   name: nithu99-hpa
-  namespace: nithu
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: nithu99
-  minReplicas: 1
-  maxReplicas: 5
-  targetCPUUtilizationPercentage: 50
+    name: nithu99-deployment  # Replace this with the actual deployment name
+  minReplicas: 2  # Set your desired minimum number of replicas
+  maxReplicas: 5  # Set your desired maximum number of replicas
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 50  # Set your desired average CPU utilization percentage
