--- a/rolebinding.yaml
+++ b/rolebinding.yaml
@@ -1,13 +1,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: bhanuteja822-rolebinding
-  namespace: nv1
+  name: nithu99-rolebinding
+  namespace: nithu
 subjects:
 - kind: ServiceAccount
-  name: bhanuteja822-serviceaccount
-  namespace: nv1
+  name: nithu99-serviceaccount
+  namespace: nithu
 roleRef:
   kind: Role
-  name: bhanuteja822-role
+  name: nithu99-role
   apiGroup: rbac.authorization.k8s.io
