--- a/role.yaml
+++ b/role.yaml
@@ -1,8 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: bhanuteja822-role
-  namespace: nv1
+  name: nithu99-role
+  namespace: nithu
 rules:
 - apiGroups: ["apps"]
   resources: ["deployments"]
