--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -15,6 +15,15 @@ spec:
       labels:
         app: nithu99
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            - matchExpressions:
+              - key: node-label-key
+                operator: In
+                values:
+                - node-label-value
       containers:
       - name: nithu99
         image: nithu99/dotnet-demo-app:v1.0
