--- a/repo1/values.yaml
+++ b/repo1/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nikitha2109/nikithaimage
+  repository: nithu99/dotnet-demo-ap
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: 1.0.1
