--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -1,65 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nithu99
-  namespace: nithu
-  labels:
-    app: nithu99
+  name: my-new-deployment
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nithu99
+      app: myapp
   template:
     metadata:
       labels:
-        app: nithu99
+        app: myapp
+      annotations:
+        cni.projectcalico.org/podIP: "10.244.0.28/32"
     spec:
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: node-label-key
-                operator: In
-                values:
-                - node-label-value
+      serviceAccountName: my-service-account
       containers:
-      - name: nithu99
-        image: nithu99/dotnet-demo-app:v1.0
+      - name: my-container
+        image: nikitha2109/nikithaimage:1.0.1
         ports:
         - containerPort: 80
-        resources:
-          limits:
-            cpu: "200m"
-            memory: "300Mi"
-          requests:
-            cpu: "100m"
-            memory: "300Mi"
-        livenessProbe:
-          exec:
-            command:
-            - ls
-          initialDelaySeconds: 5
-          periodSeconds: 5
-          failureThreshold: 3
-          successThreshold: 1
-        readinessProbe:
-          exec:
-            command:
-            - ls
-          initialDelaySeconds: 5
-          periodSeconds: 10
-          failureThreshold: 3
-          successThreshold: 1
-        env:
-        - name: ENV_VARIABLE_1
-          valueFrom:
-            configMapKeyRef:
-              name: nithu99-configmap
-              key: ENV_VARIABLE_1
-        - name: SECRET_KEY
-          valueFrom:
-            secretKeyRef:
-              name: nithu99-secret
-              key: SECRET_KEY
+      tolerations:
+      - key: "pod"
+        operator: "Equal"
+        value: "true"
+        effect: "NoSchedule"
+      affinity:
+        podAffinity:
+           requiredDuringSchedulingIgnoredDuringExecution:
+         - labelSelector:
+               matchExpressions:
+               - key: "app"
+                 operator: In
+                 values:
+                 - myapp
+              topologyKey: "kubernetes.io/hostname"
